Initialize most services via dependency injection - Make most dependencies obvious by moving injections to the constructor - Break some cyclic dependencies - Reduce reliance on the main plugin class